correction du fun